--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,34 @@
 .App {
+  box-shadow: 10px 5px 5px black;
+}
+
+h3 {
   text-align: center;
 }
 
-
 table {
   padding: 0%;
-  margin: 5%;
+  margin: 1%;
+  float: left;
+  display: inline-table;
+  border: 1px solid black;
+  width: auto;
+  box-shadow: 5px 5px 15px black;
 }
 
 th, td {
   margin: 0%;
-  padding: 2%;
+  padding: 1%;
+  /* width: 50%; */
+  text-align: left;
+}
+
+.box-shadow {
+  padding: 0%;
+  margin: 1%;
+  float: left;
+  display: inline-table;
+  border: 1px solid black;
+  width: auto;
+  box-shadow: 5px 5px 15px black;
 }
