--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,9 +11,9 @@ table {
   margin: 1%;
   float: left;
   display: inline-table;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   width: auto;
-  box-shadow: 5px 5px 15px black;
+  /* box-shadow: 5px 5px 15px black; */
 }
 
 th, td {
@@ -21,6 +21,16 @@ th, td {
   padding: 1%;
   /* width: 50%; */
   text-align: left;
+}
+
+tbody {
+  padding: 0%;
+  margin: 1%;
+  float: right;
+  display: inline-table;
+  border: 1px solid black;
+  width: auto;
+  box-shadow: 5px 5px 15px black;
 }
 
 .box-shadow {
