--- a/client/src/App.css
+++ b/client/src/App.css
@@ -86,3 +86,11 @@ tbody {
   margin: 10px;
   padding: 10px;
 }
+
+.dev-plug {
+  position: absolute;
+  bottom: 0%;
+  left: 85%;
+  margin: 10px;
+  padding: 10px;
+}
