--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,18 +1,3 @@
-
-
-@media only screen and (max-width: 600px) {
-  .App {
-    display: flex;
-  }
-
-  .SunriseSunset1, .SunriseSunset2 {
-    position: relative;
-    left: 0%;
-    margin: 10px;
-    padding: 10px;
-  }
-}
-
 h3 {
   text-align: center;
 }
@@ -37,19 +22,58 @@ tbody {
   box-shadow: 5px 5px 15px black;
 }
 
-@media screen and (min-width: 1024px) {
-  
+/* Smaller screens */
+@media only screen and (max-width: 600px) {
   .App {
-    width: 1280px;
-    height: 960px;
+    width: 600px;
   }
+
+  .box-shadow {
+    padding: 0%;
+    margin: 1%;
+    border: 1px solid black;
+    width: auto;
+    box-shadow: 5px 5px 15px black;
+  }
+
+  .SunriseSunset1 {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .SunriseSunset2 {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .Weather {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .dev-plug {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .CatTalk {
+    max-width: 450px;
+    min-width: 150px;
+    word-wrap: break-word;
+    font-size: 36px;
+    text-align: center;
+  }
+}
+
+/* Medium screens
+@media screen and (min-width: 601px), screen and (max-width: 1023px) {
   
   #pixelCat {
-    width: 50%;
-    height: 50%;
+    width: 30%;
+    height: 30%;
     border: 1px solid black;
     box-shadow: 5px 5px 15px black;
-    opacity: 8%;
+    opacity: 78%;
   }
 
   .box-shadow {
@@ -92,21 +116,75 @@ tbody {
     padding: 10px;
   }
 
-  .CatDialogue {
-    background-image: url("./images/pixel_cat_bg.png");
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    width: 1500px;
-    height: 960px;
-  }
-
   .CatTalk {
     position: absolute;
     left: 42%;
     top: 42%;
     max-width: 25%;
+    min-width: 150px;
+    word-wrap: break-word;
+    font-size: 36px;
+  }
+} */
+
+/* Larger screens */
+@media screen and (min-width: 1024px) {
+
+  #pixelCat {
+    max-width: 600px;
+    opacity: 88%;
+    position: fixed;
+    bottom: 0%;
+    left: 0%;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .box-shadow {
+    padding: 0%;
+    margin: 1%;
+    border: 1px solid black;
+    width: auto;
+    box-shadow: 5px 5px 15px black;
+  }
+
+  .SunriseSunset1 {
+    position: absolute;
+    top: 0%;
+    left: 75%;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .SunriseSunset2 {
+    position: absolute;
+    top: 20%;
+    left: 75%;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .Weather {
+    position: absolute;
+    top: 40%;
+    left: 75%;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .dev-plug {
+    position: absolute;
+    bottom: 0%;
+    left: 80%;
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .CatTalk {
+    position: absolute;
+    left: 10%;
+    top: 10%;
+    max-width: 50%;
     min-width: 150px;
     word-wrap: break-word;
     font-size: 36px;
